Background scaling, header overflow fixed
Background width fixed to 100% of body width, auto height to preserve original image proportions.
Header menu button overflow fixed (it was due to fixing header height to 34px, and menu button on small devices having 29px height + 8px padding.

--- a/_sass/common.sass
+++ b/_sass/common.sass
@@ -23,14 +23,14 @@ body
     height: 100vh
     /* https://pixabay.com/en/landscape-forest-trees-jungle-2584127/ */
     background-image: url("/images/bg_100pc.jpg")
-    background-size: 100% 100%
+    background-size: 100% auto
     background-attachment: fixed 
     margin: 0
     padding: 0
 
 @media screen and (max-width: $small_screen_max_width)
     body
-        background-size: auto 100%
+        background-size: 100% auto
 
 
 //@media screen and (max-resolution: $small_screen_dpi)
